// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots time-tracking/JobSelectDialog/ExploreInHierarchy/ListItem default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 240px;
  height: 100%;
  padding: 6px 20px 7px 20px;
}

.c0:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c1:hover {
  cursor: pointer;
  background: #f3f2f2;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    CONTENT
  </div>
</div>
`;

exports[`Storyshots time-tracking/JobSelectDialog/ExploreInHierarchy/ListItem hasChildren  1`] = `
.c5 {
  width: 12px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  fill: #2782ed;
}

.c2 {
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  width: 28px;
  padding: 0;
}

.c2:hover {
  background: #f3f2f2;
}

.c2:active {
  background: #e5e5e5;
}

.c2:disabled,
.c2:disabled:active,
.c2:disabled:hover {
  color: #d9d9d9;
  background: none;
}

.c4 {
  width: 12px;
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 240px;
  height: 100%;
  padding: 6px 20px 7px 20px;
}

.c0:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c1:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c3:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c3:hover {
  background: transparent;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    CONTENT
  </div>
  <button
    className="c2 c3"
    color="#2782ed"
  >
    <test-file-stub
      className="c4 c5 c3"
      color="#2782ed"
    />
  </button>
</div>
`;

exports[`Storyshots time-tracking/JobSelectDialog/ExploreInHierarchy/ListItem hasChildren selected 1`] = `
.c5 {
  width: 12px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  fill: white;
}

.c2 {
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  width: 28px;
  padding: 0;
}

.c2:hover {
  background: #f3f2f2;
}

.c2:active {
  background: #e5e5e5;
}

.c2:disabled,
.c2:disabled:active,
.c2:disabled:hover {
  color: #d9d9d9;
  background: none;
}

.c4 {
  width: 12px;
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 240px;
  height: 100%;
  padding: 6px 20px 7px 20px;
  color: #fff;
  background: #2782ed;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  color: #fff;
  background: #2782ed;
}

.c1:hover {
  cursor: pointer;
}

.c3:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c3:hover {
  background: transparent;
}

<div
  className="c0"
  onClick={[Function]}
  selected={true}
>
  <div
    className="c1"
    selected={true}
  >
    CONTENT
  </div>
  <button
    className="c2 c3"
    color="white"
  >
    <test-file-stub
      className="c4 c5 c3"
      color="white"
    />
  </button>
</div>
`;

exports[`Storyshots time-tracking/JobSelectDialog/ExploreInHierarchy/ListItem opened 1`] = `
.c5 {
  width: 12px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  fill: #2782ed;
}

.c2 {
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  width: 28px;
  padding: 0;
}

.c2:hover {
  background: #f3f2f2;
}

.c2:active {
  background: #e5e5e5;
}

.c2:disabled,
.c2:disabled:active,
.c2:disabled:hover {
  color: #d9d9d9;
  background: none;
}

.c4 {
  width: 12px;
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 240px;
  height: 100%;
  padding: 6px 20px 7px 20px;
  color: #333;
  background: #ebf3f7;
}

.c0:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c1 {
  color: #333;
  background: #ebf3f7;
}

.c1:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c3:hover {
  cursor: pointer;
  background: #f3f2f2;
}

.c3:hover {
  background: transparent;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    CONTENT
  </div>
  <button
    className="c2 c3"
    color="#2782ed"
  >
    <test-file-stub
      className="c4 c5 c3"
      color="#2782ed"
    />
  </button>
</div>
`;

exports[`Storyshots time-tracking/JobSelectDialog/ExploreInHierarchy/ListItem selected 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 240px;
  height: 100%;
  padding: 6px 20px 7px 20px;
  color: #fff;
  background: #2782ed;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  color: #fff;
  background: #2782ed;
}

.c1:hover {
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
  selected={true}
>
  <div
    className="c1"
    selected={true}
  >
    CONTENT
  </div>
</div>
`;
